--- a/static/style.css
+++ b/static/style.css
@@ -20,6 +20,7 @@ body {
     padding-top: 4rem;
     padding-bottom: 4rem;
     background-color: #111;
+    margin-bottom: 1.2rem;
 }
 
 #content header h1 {
