--- a/static/style.css
+++ b/static/style.css
@@ -181,6 +181,15 @@ body {
     font-size: 1.4rem;
 }
 
+#content #table-of-contents {
+    margin-bottom: 3rem;
+}
+
+#content #table-of-contents ul {
+    margin-top: 0.5rem;
+    margin-bottom: 0.5rem;
+}
+
 #footnotes sup {
     padding-left: 2rem;
     line-height: 1.0rem;
