--- a/static/style.css
+++ b/static/style.css
@@ -185,6 +185,14 @@ hr {
   color: #5c6267;
 }
 
+.top-ad {
+  max-width: 800px;
+  margin: 0 auto;
+  padding-left: 16px;
+  padding-right: 16px;
+  margin-top: 48px;
+  margin-bottom: 48px;
+}
 /* content */
 
 .content {
