--- a/static/style.css
+++ b/static/style.css
@@ -257,6 +257,11 @@ hr {
   margin: 0 auto;
 }
 
+::-webkit-scrollbar {
+  height: 0px;
+  background: transparent;
+}
+
 .content pre {
   max-width: 100%;
   margin-top: 1.8rem;
