--- a/static/style.css
+++ b/static/style.css
@@ -192,7 +192,7 @@ hr {
   padding-right: 16px;
   margin-top: 48px;
   margin-bottom: 48px;
-  border: 1px solid red;
+  text-align: center;
 }
 /* content */
 
