update with 1 changes

--- a/static/style.css
+++ b/static/style.css
@@ -187,6 +187,7 @@ hr {
 
 .top-ad-container {
   max-width: 800px;
+  max-height: 207px;
   margin: 0 auto;
   margin-top: 48px;
   margin-bottom: 48px;
@@ -199,6 +200,7 @@ hr {
 
 .mid-ad-container {
   max-width: 800px;
+  max-height: 207px;
   margin: 0 auto;
   margin-top: 48px;
   margin-bottom: 48px;
@@ -211,6 +213,7 @@ hr {
 
 .bottom-ad-container {
   max-width: 800px;
+  max-height: 207px;
   margin: 0 auto;
   margin-top: 48px;
   margin-bottom: 48px;
