--- a/static/style.css
+++ b/static/style.css
@@ -289,6 +289,10 @@ hr {
   clear: both;
 }
 
+.content hr {
+  width: 100%;
+}
+
 /* summary */
 
 .summary-container {
@@ -410,11 +414,6 @@ hr {
 
 .content .org-src-container {
 }
-
-/* .content pre -webkit-scrollbar { */
-/*   height: 0px; */
-/*   background: transparent; */
-/* } */
 
 .content pre {
   max-width: 100%;
@@ -559,119 +558,3 @@ footer {
   font-size: 0.9rem;
   color: #5c6267;
 }
-/* old */
-
-/*
-#content header h1 {
-  margin-top: 0.1rem;
-  margin-bottom: 0.1rem;
-  padding-left: 1rem;
-  padding-right: 1rem;
-  font-size: 2rem;
-  font-weight: bold;
-  color: #e6e6e6;
-}
-
-#content header h2 {
-  margin-top: 0.1rem;
-  margin-bottom: 0.1rem;
-  padding-left: 1rem;
-  font-size: 0.8rem;
-  font-weight: normal;
-  color: #a4a4a4;
-}
-
-#content h2,
-h3,
-h4,
-h5,
-h6,
-p,
-blockquote {
-  padding-left: 1rem;
-  padding-right: 1rem;
-}
-
-#content h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  padding-top: 0;
-  padding-bottom: 0;
-  max-width: 800px;
-  margin: 0 auto;
-  color: #e6e6e6;
-}
-
-
-#content hr {
-  max-width: 400px;
-  margin: 0 auto;
-  margin-top: 64px;
-  margin-bottom: 64px;
-  border: none;
-  border-top: 1px solid #333;
-}
-
-#content figure {
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-#content img {
-  max-width: 100%;
-}
-
-#content .inlinead {
-  width: 100%;
-  max-width: 100%;
-  text-align: center;
-}
-
-#content #table-of-contents {
-  margin-bottom: 3rem;
-}
-
-#content #table-of-contents ul {
-  margin-top: 0.5rem;
-  margin-bottom: 0.5rem;
-}
-
-#content .summary {
-  margin-top: 1.2rem;
-}
-
-#content .summary h3 {
-  margin-top: 0.5rem;
-  margin-bottom: 0.2rem;
-  font-size: 1.2rem;
-}
-
-#content .summary p {
-  margin-top: 0.2rem;
-  margin-bottom: 1.5rem;
-}
-
-#footer {
-  margin-top: 64px;
-  text-align: center;
-}
-
-#time {
-  line-height: 1rem;
-  padding: 0;
-  margin: 0;
-  font-size: 0.8rem;
-  color: #6e6e6e;
-}
-
-#copyright {
-  line-height: 1rem;
-  padding: 0 0 1rem 0;
-  margin: 0;
-  font-size: 0.8rem;
-  color: #6e6e6e;
-}
-*/
