--- a/static/style.css
+++ b/static/style.css
@@ -545,7 +545,7 @@ td.org-left {
   padding-right: 16px;
 }
 
-.refss-container h1 {
+.refs-container h1 {
   font-size: 1.4rem;
   font-weight: 350;
   color: #e6e6e6;
