--- a/static/style.css
+++ b/static/style.css
@@ -73,6 +73,7 @@ body {
 
   .top-ad-container {
     width: 100%;
+    margin: 48px 0px 48px 0px;
   }
 
   .top-ad {
@@ -145,13 +146,8 @@ body {
   }
 
   .top-ad-container {
-    max-width: 800px;
-    height: auto;
-    padding: 0;
-    margin: 0 auto;
-    margin-top: 48px;
-    margin-bottom: 48px;
-    text-align: center;
+    width: 100%;
+    margin: 48px 0px 48px 0px;
   }
 
   .top-ad {
@@ -214,13 +210,8 @@ body {
   }
 
   .top-ad-container {
-    max-width: 800px;
-    height: auto;
-    padding: 0;
-    margin: 0 auto;
-    margin-top: 48px;
-    margin-bottom: 48px;
-    text-align: center;
+    width: 100%;
+    margin: 48px 0px 48px 0px;
   }
 
   .top-ad {
