update with 7 changes

--- a/static/style.css
+++ b/static/style.css
@@ -289,6 +289,14 @@ hr {
   clear: both;
 }
 
+hr.spliter {
+  width: 20%;
+  border: 0.5px solid #5c6267;
+  margin-top: 36px;
+  margin-bottom: 36px;
+  clear: both;
+}
+
 /* summary */
 
 .summary-container {
