--- a/static/style.css
+++ b/static/style.css
@@ -1,5 +1,3 @@
-/* Seorenn Note Styles */
-
 body {
   margin: 0;
   padding: 0;
@@ -9,6 +7,14 @@ body {
   word-break: keep-all;
   line-height: 1.8rem;
   font-size: 18px;
+
+  /* readability */
+  text-shadow: 0 0 0.1px rgba(0, 0, 0, 0.3);
+  -webkit-text-size-adjust: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -moz-font-smoothing: antialiased;
+  text-rendering: optimizelegibility;
 }
 
 /* Big */
