update style for top ad

--- a/static/style.css
+++ b/static/style.css
@@ -83,6 +83,8 @@ body {
   }
 
   .top-ad {
+    width: 728px;
+    height: 90px;
   }
 
   .side-ad-container {
@@ -157,8 +159,8 @@ body {
   }
 
   .top-ad {
-    width: 100%;
-    height: auto;
+    width: 728px;
+    height: 90px;
   }
 
   .side-ad-container {
@@ -221,8 +223,6 @@ body {
   }
 
   .top-ad {
-    width: 100%;
-    height: auto;
   }
 
   .side-ad-container {
