update with 2 changes

--- a/static/style.css
+++ b/static/style.css
@@ -58,6 +58,10 @@ body {
     bottom: 0;
   }
 
+  .archive-link {
+    font-size: 1rem;
+  }
+
   .content-container {
     display: grid;
     grid-template-columns: 40px 800px 200px;
