--- a/static/style.css
+++ b/static/style.css
@@ -392,7 +392,7 @@ div.outline-text-2 > hr {
 
 .content header h1 {
   font-size: 1.6rem;
-  font-weight: 350;
+  font-weight: bold;
 }
 
 .content a, .content a:link, .content a:visited, .content a:hover, .content a:active {
@@ -403,7 +403,7 @@ div.outline-text-2 > hr {
 .content h1, h2, h3, h4, h5, h6 {
   padding-top: 0;
   padding-bottom: 0;
-  font-weight: 350;
+  font-weight: bold;
   margin: 0 auto;
   color: #e6e6e6;
 }
@@ -553,7 +553,7 @@ td.org-left {
 
 .backlinks-container h1 {
   font-size: 1.4rem;
-  font-weight: 350;
+  font-weight: bold;
   color: #e6e6e6;
 }
 
@@ -565,7 +565,7 @@ td.org-left {
 
 .refs-container h1 {
   font-size: 1.4rem;
-  font-weight: 350;
+  font-weight: bold;
   color: #e6e6e6;
 }
 
