Add youtube class

--- a/static/style.css
+++ b/static/style.css
@@ -496,6 +496,18 @@ td.org-left {
   padding: 0.8rem 1rem 0.8rem 1rem;
 }
 
+.youtube {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+}
+
+.youtube iframe {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
 /* post info */
 
 .post-info-container img {
